testsuite/tests/th/T14627.stderr
T14627.hs:4:1: error: [GHC-01928]
    • Illegal term-level use of the type constructor ‘Bool’
    • imported from ‘Prelude’ at T14627.hs:1:1
      (and originally defined in ‘GHC.Internal.Types’)
    • In the expression: Bool
      In an equation for ‘f’: f = Bool

